Fix unpassable test, introduce auth_user method
